--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-</head>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<body>
+  <body>
     <main>
+      <section id="game-field">
+        <h2>game</h2>
 
-        <section id="game-field">
-            <h2>ISsoft: Full-stack web development</h2>
+        <div id="game-map"></div>
+      </section>
 
-            <div id="game-map">
-            </div>
-
-        </section>
-
-        <section id="legend">
-            <h2>Легенда</h2>
-            <ul class="legend-list">
-                <li class="legend-item">
-                    <div class="game-object game-object__player-tank"></div> танк игрока
-                </li>
-                <li class="legend-item">
-                    <div class="game-object game-object__enemy-tank"></div> вражеский танк
-                </li>
-                <li class="legend-item">
-                    <div class="game-object game-object__wall"></div> стена
-                </li>
-            </ul>
-        </section>
+      <section id="legend">
+        <h2>Легенда</h2>
+        <ul class="legend-list">
+          <li class="legend-item">
+            <div class="game-object game-object__player-tank"></div>
+            танк игрока
+          </li>
+          <li class="legend-item">
+            <div class="game-object game-object__enemy-tank"></div>
+            вражеский танк
+          </li>
+          <li class="legend-item">
+            <div class="game-object game-object__wall"></div>
+            стена
+          </li>
+        </ul>
+      </section>
     </main>
-
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
 
     <script type="module" src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
