tranlate html to English

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
   <body>
     <main>
       <section id="game-field">
-        <h2>game</h2>
+        <h2>Battle City</h2>
 
         <div id="game-map"></div>
       </section>
 
       <section id="legend">
-        <h2>Легенда</h2>
+        <h2>Legend</h2>
         <ul class="legend-list">
           <li class="legend-item">
             <div class="game-object game-object__player-tank"></div>
-            танк игрока
+            Player tank
           </li>
           <li class="legend-item">
             <div class="game-object game-object__enemy-tank"></div>
-            вражеский танк
+            Enemy tank
           </li>
           <li class="legend-item">
             <div class="game-object game-object__wall"></div>
-            стена
+            Wall
           </li>
         </ul>
       </section>
