add new constants

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             Wall
           </li>
         </ul>
-        <div id="player-life">Player: <span id="playerCounter">3</span> life</div>
-            <div id="enemy-life">Enemy: <span id="enemyCounter">21</span> life</div>
+        <div id="player-life">Player: <span id="playerCounter"></span> life</div>
+            <div id="enemy-life">Enemy: <span id="enemyCounter"></span> life</div>
       </section>
     </main>
 
